[project]
name = "opis"
version = "0.1.0"
description = "Static code checker for Python which encourages declarative programming."
authors = [{ name = "leya.law developers", email = "dev@leya.law" }]
dependencies = ["ast-grep-py>=0.26.2"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
